small fixes
small fixes